Finalize o relatorio e mantenha as observacoes

--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@ Observações em aula:
 Apresente os gráficos obtidos a partir dos experimentos para o sistema em malha fechada com diferentes valores de $k_p$.
 
     \begin{solution}
-    Analisando-se os gráficos da figura~\ref{fig:fechada_corrigida}, fica evidente que o aumento do ganho proporcional $k_p$ diminui o tempo de subida do sinal, no entanto, também aumenta o sobre-sinal, número de oscilações e tempo de assentamento. E com a figura~\ref{fig:fechada_mola} é observado o mesmo efeito, porém com erros em regime, que podem ser reduzidos com o aumento de $k_p$, ou seja, o aumento do valor de $k_p$a presença de distúrbios pode ser 
+    Analisando-se os gráficos da figura~\ref{fig:fechada_corrigida}, fica evidente que o aumento do ganho proporcional $k_p$ diminui o tempo de subida do sinal, no entanto, também aumenta o sobre-sinal, número de oscilações e tempo de assentamento. E com a figura~\ref{fig:fechada_mola} é observado o mesmo efeito, porém com erros em regime, que podem ser reduzidos com o aumento de $k_p$, ou seja, o aumento do valor de $k_p$ diminui a influencia dos distúrbios no sistema. 
     \end{solution}
     
 \question Explique por que, eventualmente, é necessário ajustar o valor do ganho do pré-filtro na experiência com o sistema operando em malha aberta. 
